--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,7 @@
                     demonstrate control from JS.
                 </p>
                 <p>
-                    <button id="select-dogs">Select Dogs</button>
+                    <button id="select-more">Select More</button>
                     <button id="collapse">Collapse</button>
                 </p>
             </section>
@@ -26,26 +26,62 @@
             <div id="my-accordion" class="hut-accordion">
                 <div class="accordion-section">
                     <header class="accordion-header">
-                        <h3>Main</h3>
+                        <h3>Section</h3>
                     </header>
                     <section class="accordion-content">
-                        <p>Some content for main section.</p>
+                        <p>
+                            Vivamus porta leo eu tellus placerat ac suscipit
+                            felis interdum. Suspendisse augue orci, placerat id
+                            mattis ac, tincidunt blandit orci. Sed erat nibh,
+                            condimentum ut aliquam sit amet, consequat ut diam.
+                            Curabitur ut purus sed tortor fringilla rhoncus.
+                            Cras egestas suscipit facilisis. Donec adipiscing
+                            ultrices vestibulum. Cras tristique dictum sapien,
+                            non euismod lectus vulputate ac. Aliquam luctus erat
+                            nec lacus mollis et dapibus ligula tempor. Duis
+                            rhoncus ipsum ut risus placerat sit amet fringilla
+                            lacus elementum. Fusce a est elit, ac mattis turpis.
+                            Curabitur ac euismod libero.
+                        </p>
                     </section>
                 </div>
-                <div id="cat-section" class="accordion-section">
+                <div id="more-section" class="accordion-section">
                     <header class="accordion-header">
-                        <h3>Cats</h3>
+                        <h3>More</h3>
                     </header>
                     <section class="accordion-content">
-                        <p>Some cute kittens...</p>
+                        <p>
+                            Maecenas interdum feugiat leo, in suscipit dolor
+                            pellentesque facilisis. Aliquam tristique dapibus
+                            nisl, quis hendrerit odio venenatis laoreet.
+                            Vestibulum velit dolor, ultrices at feugiat vitae,
+                            accumsan ac ligula. Aliquam condimentum dictum nibh
+                            ut sagittis. Sed volutpat facilisis diam, id laoreet
+                            purus vulputate in. Quisque nec ligula sit amet
+                            mauris facilisis rutrum. Maecenas aliquet porttitor
+                            dui, et porta augue consectetur et. Cum sociis
+                            natoque penatibus et magnis dis parturient montes,
+                            nascetur ridiculus mus. Integer malesuada placerat
+                            urna ac iaculis. Proin laoreet semper tempus. Sed
+                            molestie turpis ac dolor condimentum et tincidunt
+                            erat pellentesque. In augue orci, tempor in faucibus
+                            sed, aliquet quis orci. Class aptent taciti sociosqu
+                            ad litora torquent per conubia nostra, per inceptos
+                            himenaeos. Integer pharetra quam at mi venenatis non
+                            adipiscing magna lacinia. Nullam quis enim mi, ut
+                            viverra eros.
+                        </p>
                     </section>
                 </div>
-                <div id="dog-section" class="accordion-section">
+                <div class="accordion-section">
                     <header class="accordion-header">
-                        <h3>Dogs</h3>
+                        <h3>Another Section</h3>
                     </header>
                     <section class="accordion-content">
-                        <p>Some cute puppies...</p>
+                        <p>
+                            Fusce mollis velit non lectus volutpat quis cursus
+                            ante commodo.
+                        </p>
                     </section>
                 </div>
             </div>
