--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <p>
                     <button id="select-more">Select More</button>
                     <button id="collapse">Collapse</button>
+                    <button id="add-section">Add Section</button>
+                    <button id="remove-section">Remove Section</button>
                 </p>
             </section>
 
